# large-data-collider

./: .gitignore  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 6ca1d79395fe_added_table_to_store_emojis.py  77363734854a_added_event_type_for_status_updates.py  f17e41937c9c_initial.py
grafana/: Dockerfile  config.ini  grafana.ini
grafana/dashboards/: discord.json
grafana/provisioning/dashboards/: all.yml
grafana/provisioning/datasources/: all.yml
ldc/: Dockerfile  bot.py  config.py
ldc/cogs/: __init__.py  channel_collector.py  emoji_collector.py  entry_collector.py  message_collector.py  metric_collector.py  reaction_collector.py  state_collector.py  voice_state_collector.py
ldc/models/: __init__.py  channels.py  events.py  serveremoji.py
tests/: test_ldc.py
