[tool.poetry]
name = "ldc"
version = "0.1.0"
description = "Discord data collection and visualisation using TimescaleDB and Grafana"
authors = ["Tomás F. <contact@tomff.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "^1.7.3"
SQLAlchemy = "^1.4.28"
alembic = "^1.7.5"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
bot = "ldc.bot:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
